@@ -1,3 +1,8 @@
+2009-05-27
+	* src/auth.c(pam_sm_authenticate): if we need to be the module that
+	asks for a password, do so before sanity checking things like whether
+	or not the user name is valid (#502602)
+
 2009-03-04
 	* src/initopts.c(_pam_krb5_set_init_opts_for_pwchange): add, for
 	setting options which are appropriate for obtaining password-changing
